--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body>
     <header>
       <h1>The Easter Bunny</h1>
-      <img src="imageseaster-bunny-150-profile.png">
+      <!-- <img src="easter-bunny-150-profile.png"> -->
+      <img src="images/easter-bunny-150-profile.png" alt="Easter Bunny profile picture"> 
     </header>
     <nav id="myTopnav" class="topnav">
       <a href="index.html">Home</a>
@@ -56,7 +57,8 @@
         </article>
         <h2>In Summary</h2>
         <article>
-          <h3>Enough Content
+          <!-- <h3>Enough Content -->
+            <h3>Enough Content</h3>
             <p>You need enough content to thoroghly populate your page. The content should cause the page to be long enough to need to scroll. Keep copy/pasting content from Wikipedia until you have enough content to scroll. You will use this page later to embellish it with styles, color, formatting and layouts.</p>
         </article>
       </section>
