--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<!-- <html> added lang-->
+<html lang="en">
 
   <head>
-    <meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--<meta>-->
+    <meta charset="UTF-8">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />. removed/-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Easter Bunny Debugging</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="layout.css">
